# Urban-Geometry

./: .qmake.stash  CGAL_Qt5_moc_and_resources.lib  CMakeLists.txt  README.md  UCG.pro  UCG.qtvscr  UCG.sln  UCG.vcxproj  UCG.vcxproj.filters  hs_execution_log.cpp  hs_shortest_path.cpp  hs_triangulation.cpp  icon.qrc  interactive_view.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  previous pro.txt  ui_ImageInterface.h  ui_mainwindow.h
Sample Files/新宿/: link.geojson  node.geojson
Sample Files/渋谷/: node.geojson
UCG_executable/: UCG.exe.recipe  UCG.vcxproj.FileListAbsolute.txt  moc_interactive_view.cpp  moc_mainwindow.cpp  qrc_icon.cpp
UCG_executable/UCG.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  UCG.lastbuildstate  UCG.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  moc.read.1u.tlog  moc.write.1u.tlog  rcc.read.1u.tlog  rcc.write.1u.tlog  uic.read.1u.tlog  uic.write.1u.tlog
include/: HS_CTriangulationGraphicsItem.h  HS_Delaunay_triangulation_2.h  HS_TriangulationGraphicsItem.h  HS_Triangulation_2.h  hs_execution_log.h  hs_shortest_path.h  hs_triangulation.h  interactive_view.h  mainwindow.h
